--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.scala-logging</groupId>
+            <artifactId>scala-logging_2.12</artifactId>
+            <version>3.9.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
